--- a/Code/.vscode/settings.json
+++ b/Code/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
+        "barplot",
         "chebyshev",
         "crossentropy",
         "droping",
         "dtype",
+        "figsize",
         "iloc",
         "kfold",
         "logspace",
